@startuml

class Inscripción{
+ aprobada(): Boolean /'Representa la aprobación de la inscripción en sí. La inscripción está aprobada si el Alumno puedeInscribirse'/
- materiasPorCursar: Set<Materia>
- alumno: Alumno
+ agregarMaterias(materias: Materia ...)
}

class Alumno{
+ puedeInscribirse(materiasPorCursar: Set<Materia>): Boolean /'El Alumno puedeInscribirse si puedeCursar cada Materia'/
- materiasAprobadas: Set<Materia>
'- nombre: String
+ aprobo(materia: Materia): Boolean /'El Alumno aprobó la materia si forma parte de sus materiasAprobadas'/
+ agregarAprobadas(materias: Materia ...)
}

class Materia{
- materiasNecesarias: Set<Materia>
+ puedeCursar(alumno: Alumno): Boolean /'El Alumno puedeCursar la Materia si cumpleLasCorrelatividades()'/
- cumpleLasCorrelatividades(alumno: Alumno): Boolean /'El Alumno cumpleLasCorrelatividades si aprobo las materiasNecesarias'/
- nombre: String
+ agregarCorrelativas(materias: Materia ...)
}

'Hay agregación porque las aterias forman parte de la isncripción
Inscripción o-- Materia
Inscripción o-- Alumno

Alumno o-- Materia

'No hay agregación porque las amterias no forman parte de la materia, si no que se tiene referencia a ellas solo para poder analizar las correlatividades
Materia <-- Materia
@enduml